# bdd

./: .gitignore  bdd  bdd_server.py  catalog-explorer.html  catalog_explorer.py  iteration.md  loop.sh  plan.md
bench/: ANALYSIS_README.md  (+9 more)
bench/subject/: pyproject.toml  subject.json
bench/subject/.claude/hooks/: stop-test-gate.sh
bench/subject/src/taskboard/: cli.py  display.py  models.py  store.py
bench/subject/tests/: conftest.py  test_taskboard.py
bench/subject_2/: .gitignore  DOCKER_PLAN.md  MANIFEST.in  README.md  TESTING.md  __main__.py  adk_playground.py  bdd.json  build.sh  catalog-context.md  catalog.json  file_memory_service.py  file_session_service.py  mcp.json.example  pyproject.toml  pytest.ini  run.sh  setup.sh  start.sh  subject.json
bench/subject_2/.claude/: settings.json
bench/subject_2/.claude/hooks/: stop-test-gate.sh
bench/subject_2/adk_playground/: __init__.py
bench/subject_2/backend/: __init__.py  __main__.py  adk_evaluation_service.py  agent_runner.py  code_generator.py  evaluation_service.py  knowledge_service.py  known_mcp_servers.py  main.py  model_service.py  models.py  project_manager.py  runtime.py  skillset.py
bench/subject_2/backend/agents/agent_config_generator/: __init__.py  agent.py
bench/subject_2/backend/sandbox/: __init__.py  allowlist_persistence.py  api.py  docker_manager.py  mcp_manager.py  models.py  webhook_handler.py
bench/subject_2/frontend/: index.html  package-lock.json  package.json  vite.config.ts
bench/subject_2/frontend/src/: App.tsx  main.tsx  monaco-config.ts  vite-env.d.ts
bench/subject_2/mcp_servers/: time_server.py
bench/subject_2/tests/: __init__.py  conftest.py  test_callbacks.py  test_integration.py  test_project_parsing.py  test_runtime.py  test_sample_projects.py
bench/subject_2/tests/sample_projects/: callback_agent.yaml  sequential_agent.yaml  simple_agent.yaml  state_agent.yaml  tool_agent.yaml
bench/subject_2/tracing_plugin/: README.md  __init__.py  events.py  plugin.py
bench/subject_2/tracing_plugin/example_agent/: __init__.py  agent.py
(+266 files in other folders)
